--- a/src/v1/scss/_custom.scss
+++ b/src/v1/scss/_custom.scss
@@ -1,3 +1,44 @@
+@tailwind base;
+
+::-webkit-scrollbar {
+    width: 10px;  /* 세로축 스크롤바 길이 */
+    height: 10px;  /* 가로축 스크롤바 길이 */
+  }
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+  ::-webkit-scrollbar-track-piece {
+    background-color: transparent;
+  }
+  ::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    background-color: rgba(28, 26, 26, 0.5);
+  }
+  ::-webkit-scrollbar-button {
+    background-color: transparent;
+    width: 4px;
+    height: 4px;
+  }
+  ::-webkit-scrollbar-button:start {
+    background-color: transparent; /* Top, Left 방향의 이동버튼 */
+  }
+  ::-webkit-scrollbar-button:end {
+    background-color: transparent; /* Bottom, Right 방향의 이동버튼 */
+  }
+  ::-webkit-scrollbar-button:vertical:increment {
+  }
+  ::-webkit-scrollbar-button:vertical:decrement {
+  }
+  ::-webkit-scrollbar-corner {
+    background-color: transparent; /* 우측 하단의 코너 부분 */
+  }
+  ::-webkit-resizer {
+    background-color: transparent;
+  }
+
+@tailwind components;
+@tailwind utilities;
+
 .sidebar-nav .nav-title {
     display: flex;
 }
