--- a/src/v1/scss/_custom.scss
+++ b/src/v1/scss/_custom.scss
@@ -32,10 +32,10 @@
   ::-webkit-scrollbar-button:end {
     background-color: transparent; /* Bottom, Right 방향의 이동버튼 */
   }
-  ::-webkit-scrollbar-button:vertical:increment {
-  }
-  ::-webkit-scrollbar-button:vertical:decrement {
-  }
+//   ::-webkit-scrollbar-button:vertical:increment {
+//   }
+//   ::-webkit-scrollbar-button:vertical:decrement {
+//   }
   ::-webkit-scrollbar-corner {
     background-color: transparent; /* 우측 하단의 코너 부분 */
   }
