--- a/src/v1/scss/_custom.scss
+++ b/src/v1/scss/_custom.scss
@@ -1,4 +1,7 @@
 @tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 
 ::-webkit-scrollbar {
     width: 10px;  /* 세로축 스크롤바 길이 */
@@ -43,9 +46,10 @@
     background-color: transparent;
   }
 
-@tailwind components;
-@tailwind utilities;
-
 .sidebar-nav .nav-title {
     display: flex;
+}
+
+.container, .container-fluid, .container-xxl, .container-xl, .container-lg, .container-md, .container-sm {
+  --cui-gutter-x: 0.5rem;
 }
