--- a/src/v1/scss/_custom.scss
+++ b/src/v1/scss/_custom.scss
@@ -51,5 +51,30 @@
 }
 
 .container, .container-fluid, .container-xxl, .container-xl, .container-lg, .container-md, .container-sm {
-  --cui-gutter-x: 0.5rem;
+  max-width: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  align-items: center;
 }
+
+@media (min-width: 1400px) {
+  .container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container {
+    max-width: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    align-items: center;
+  }
+}
+
+
+.bg-nav-title {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+
+
+
